AC_INIT([ComPressure], [0.0.1])
AM_INIT_AUTOMAKE([foreign])
AC_LANG(C++)
AC_PROG_CXX
AC_CONFIG_FILES([Makefile])

PKG_CHECK_MODULES([SDL2], [sdl2])
PKG_CHECK_MODULES([SDL2_image], [SDL2_image])
PKG_CHECK_MODULES([SDL2_mixer], [SDL2_mixer])
PKG_CHECK_MODULES([SDL2_net], [SDL2_net])
PKG_CHECK_MODULES([SDL2_ttf], [SDL2_ttf])
PKG_CHECK_MODULES([ZLIB], [zlib])
PKG_CHECK_MODULES([ZSTD], [libzstd])

AC_OUTPUT

